# siglip2-img-indexer

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/: image_index.jsonl
src/image_indexer/: cli.py  config.py  indexer.py  utils.py
